--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,29 @@
 @import "~bootstrap/scss/bootstrap.scss";
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+ul{margin: 0; padding: 0;}
+li{ list-style: none;}
+.trafficLight{
+    border-radius: 5px;
+    padding: 10px;
+    background: black;
+    margin: auto;
+    width: 70px;
+    li:nth-child(1){
+        background: red;
+    }
+    li:nth-child(2){
+        background: yellow;
+    }
+    li:nth-child(3){
+        background: green;
+    }
+    li{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
+}
+.selected{
+    box-shadow: #fff 0px 0px 40px 20px;
+//   border: 2px solid rgb(86, 180, 239);
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
+}
