--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,8 @@
 @import "~bootstrap/scss/bootstrap.scss";
+body{
+    background: rgb(214,21,118);
+background: radial-gradient(circle, rgba(214,21,118,1) 17%, rgba(41,46,46,1) 91%);
+}
 ul{margin: 0; padding: 0;}
 li{ list-style: none;}
 .trafficLight{
